--- a/training/config/config.yaml
+++ b/training/config/config.yaml
@@ -23,3 +23,16 @@ cross_val:
   final_test_data_path: artifacts/cross_val/data_for_final_train
   best_model_params: artifacts/cross_val/best_model_params
   STATUS_FILE: artifacts/cross_val/status.txt
+
+model_trainer:
+  root_dir: artifacts/model_trainer
+  final_train_data_path: artifacts/cross_val/data_for_final_train
+  final_test_data_path: artifacts/cross_val/data_for_final_train  
+  best_model_params: artifacts/cross_val/best_model_params
+  STATUS_FILE: artifacts/model_trainer/status.txt
+
+model_evaluation:
+  root_dir: artifacts/model_evaluation
+  final_test_data_path: artifacts/cross_val/data_for_final_train
+  model_path: artifacts/model_trainer
+  STATUS_FILE: artifacts/model_evaluation/status.txt
